--- a/Day4/index.html
+++ b/Day4/index.html
@@ -36,7 +36,7 @@
 
             <div
               id="right"
-              class="w-[25%] h-[90px] bg-[url('images/qr.png')] bg-center bg-cover cursor-pointer"
+              class="w-[6em] h-[6em] bg-[url('images/qr.png')] bg-center bg-cover cursor-pointer"
               onclick="portfolioRedirect()"
             ></div>
           </div>
