--- a/Day7/index.html
+++ b/Day7/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Div by Day - Day 7</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400&f[]=sentient@400&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/4b1022cf8e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
