--- a/Day7/school.html
+++ b/Day7/school.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Div by Day - Day 7</title>
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link
       href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,600,700&f[]=sentient@400&display=swap"
       rel="stylesheet"
