--- a/Day9/index.html
+++ b/Day9/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ripple Background Fixed</title>
+    <title>Div by Day - Day 9</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
