--- a/Day17/index.html
+++ b/Day17/index.html
@@ -24,9 +24,9 @@
     >
       <div
         id="toc"
-        class="collapsed w-[45%] bg-[#121212] text-white text-lg flex flex-col justify-start p-7 rounded-xl cursor-pointer"
+        class="collapsed w-[45%] sm:w-[70%] md:w-[50%] bg-[#121212] text-white text-base sm:text-lg flex flex-col justify-start p-6 sm:p-7 rounded-xl cursor-pointer"
       >
-        <h4 class="flex justify-between items-center">
+        <h4 class="flex flex-col sm:flex-row justify-between gap-2 sm:items-center">
           Terms and conditions
           <span
             class="text-sm text-white/50 underline underline-offset-2 hover:text-white/90"
@@ -35,7 +35,7 @@
           </span>
         </h4>
 
-        <div class="toc-content text-sm text-white/80">
+        <div class="toc-content text-sm sm:text-base text-white/80">
           <ul
             class="list-disc text-[15px] ml-5 mt-5 space-y-4 text-justify pr-4"
           >
